--- a/style.css
+++ b/style.css
@@ -1,30 +1,18 @@
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    #login-div {
-      width: 250px;
-    }
-    #content {
-      display: none;
-      margin-top: 30px;
-    }
-    button {
-      padding: 10px 15px;
-      font-size: 16px;
-    }
+#content {
+  display: none;
+}
+button {
+  padding: 10px 15px;
+  font-size: 16px;
+}
 #main-container {
   display: flex;
-  height: 80vh;
-  border: 1px solid #ccc;
 }
 
 #sidebar {
   width: 300px;
   padding: 10px;
   overflow-y: auto;
-  border-right: 1px solid #ccc;
-  background-color: #f9f9f9;
 }
 
 #viewer {
@@ -37,7 +25,9 @@
   height: 100%;
   border: none;
 }
-
+ul {
+  list-style-type: none;
+}
 ul.folder {
   list-style-type: none;
   padding-left: 20px;
